# fastapi-hexagonal-architecture-todolist

./: .dockerignore  .env.example  README.md  docker-compose.yml  pyproject.toml
.vscode.example/: settings.json
backend/: gunicorn_conf.py
backend/api/: README.md  entrypoint.py
backend/api/controllers/: health.py
backend/api/responses/: __init__.py  created.py  success.py
backend/config/: README.md  __init__.py  container.py  main.py  settings.py
docker/: backend.dockerfile
scripts/: production-web-start.sh  web-prestart.sh  web-start-reload.sh
